# cats_and_dogs_hai

./: .gitattributes  .gitignore  README.md  environment.yaml  pyproject.toml  task_cats_and_dogs.md
cats_and_dogs_hai/: data_paths.py  pets_classes.py
cats_and_dogs_hai/data_loading/: __init__.py  create_dataloaders.py  create_datasplits.py  data_transforms.py  load_image.py  pet_breed_dataloader.py  pet_breed_dataset.py  pet_dataset_base.py  pet_mask_dataset.py
cats_and_dogs_hai/inference/: classification_inference.py  classification_model.py  classification_prediction_base.py  combined_inference.py  combined_prediction.py  inference_base.py  pet_breed_prediction.py  pet_species_prediction.py  segmentation_inference.py
cats_and_dogs_hai/labels/: __init__.py  pet_classes.py  pets_breed_names.py
cats_and_dogs_hai/models/: classification_model.py  load_lightning_checkpoint.py  segmentation_model.py
cats_and_dogs_hai/training/: create_trainer.py  run_train.py  training_module_classification.py  training_module_segmentation.py
notebooks/: DataExplore.ipynb
tests/: test_data_paths.py  test_labels.py
tests/data_loading/: test_classification_dataset.py  test_create_datasplits.py  test_datasets.py
tests/inference/: test_classification_inference.py  test_combined_inference.py  test_prediction_classes.py  test_segmentation_inference.py
tests/labels/: test_labels.py
tests/models/: test_create_classification_model.py  test_create_segmentation_model.py
tests/test_data/: epoch=1-step=16.ckpt  segmentation_efficientnet_epoch=1-step=16.ckpt
(+6 files in other folders)
