[tool.poetry]
name = "cats-and-dogs-hai"
version = "0.1.0"
description = "Code base for classifying dog and cat breeds, and for pixel-wise segmentation for pet (cat or dog) versus no pet."
authors = ["Sean McMahon <sean3.mcmahon@gmail.com>"]
readme = "README.md"
packages = [{include = "cats_and_dogs_hai"}] 

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 90

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
torch = "^2.2.1"
torchvision = "^0.17.1"
pandas = "^2.2.1"
lightning = "^2.2.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
jupyterlab = "^4.1.2"
tensorboard = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
